2001-06-28  Mark Kettenis  <kettenis@gnu.org>

	* sysdeps/mach/hurd/Makefile ($(link-rpcuserlibs)): Add back
	-Wl,-soname option lost in 2001-06-16 change.

2001-06-27  Ulrich Drepper  <drepper@redhat.com>

	* posix/tst-regex.c: Pass REG_NEWLINE to regcomp.  Add extra tests.
	Restrict printing of string in debug mode to 100 characters to make
	the output useful for long input texts.

	* posix/Makefile: Add rules to build and run tst-regex.

2001-06-20 Isamu Hasegawa <isamu@yamato.ibm.com>

	* posix/regex.c (FREE_WCS_BUFFERS): New macro to free buffers.
	(re_search_2): invoke convert_mbs_to_wcs and FREE_WCS_BUFFERS.
	(wcs_re_match_2_internal): Check whether the wcs buffers need
	seting up or not, and skip seting up routin if not needed.

2001-06-26 Isamu Hasegawa <isamu@yamato.ibm.com>

	* posix/regex.c (count_mbs_length): Use binary search for
	optimization.

2001-06-27  Ulrich Drepper  <drepper@redhat.com>

	* posix/tst-regex.c: Fix several bugs.  Add more tests.

2001-06-26  Mark Kettenis  <kettenis@gnu.org>

	* hurd/Makefile (user-interfaces): Add pfinet.
	* hurd/hurdioctl.c: Include <hurd/pfinet.h>, <net/if.h> and
	<netinet/in.h>.
	(siocgifconf): New function.  Register it with HURD_HANDLE_IOCTL
	as the handler for SIOCGIFCONF.
	* sysdeps/mach/hurd/bits/ioctls.h: Modify SIOCSIFFLAGS and
	SIOCGIFFLAGS to be of IOC type ifreq_short.  Modify SIOCSIFMETRIC
	and SIOCGIFMETRIC to be of IOC type ifreq_int.  Add new macro
	definitions for SIOCGIFMTU, SIOCSIFMTU, SIOCGIFINDEX and
	SIOCGIFNAME.
	From Marcus Brunkmann <marcus@gnu.org>.

2001-06-25  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/gnu/net/if.h: Correct _IOT_ifreq and add _IOT_ifreq_short
	and _IOT_ifreq_int.  Patch by Mark Kettenis <kettenis@wins.uva.nl>.

	* elf/dl-deps.c (_dl_map_object_deps): Fix handling of failing
	_dl_catch_error calls.

2001-06-22  Jakub Jelinek  <jakub@redhat.com>

	* posix/regex.c (regex_compile, re_match_2_internal): Fix comment
	typos.

2001-06-01  Wolfram Gloger  <wg@malloc.de>